fix(hero): improve so that the bottom of the soil is visible

--- a/src/styles/Arrowhead.module.scss
+++ b/src/styles/Arrowhead.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    top: 75vh;
+    top: 70vh;
     color: white;
     width: 100%;
     cursor: pointer;
